# ChangeLog for sys-boot/unetbootin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/unetbootin/ChangeLog,v 1.109 2014/11/02 14:14:49 jer Exp $

  02 Nov 2014; Jeroen Roovers <jer@gentoo.org> unetbootin-608.ebuild:
  Drop <sys-boot/syslinux-5 dependency (bug #474648).

  20 Aug 2014; Jeroen Roovers <jer@gentoo.org> -unetbootin-585.ebuild,
  -unetbootin-603.ebuild:
  Old.

  20 Aug 2014; Johannes Huber <johu@gentoo.org> unetbootin-608.ebuild:
  amd64 stable, bug #511158

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> unetbootin-608.ebuild:
  x86 stable wrt bug #511158

*unetbootin-608 (05 Jun 2014)

  05 Jun 2014; Jeroen Roovers <jer@gentoo.org> +unetbootin-608.ebuild:
  Version bump.

*unetbootin-603 (22 Apr 2014)

  22 Apr 2014; Jeroen Roovers <jer@gentoo.org> +unetbootin-603.ebuild:
  Version bump.

  30 Sep 2013; Jeroen Roovers <jer@gentoo.org> -unetbootin-583.ebuild,
  -unetbootin-584.ebuild:
  Old.

  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> unetbootin-585.ebuild:
  Stable for x86, wrt bug #484260

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> unetbootin-585.ebuild:
  Stable for amd64, wrt bug #484260

  07 Sep 2013; Jeroen Roovers <jer@gentoo.org> unetbootin-583.ebuild,
  unetbootin-584.ebuild, unetbootin-585.ebuild:
  Depend on sys-boot/syslinux-4 (bug #474648).

*unetbootin-585 (03 Jul 2013)

  03 Jul 2013; Jeroen Roovers <jer@gentoo.org> +unetbootin-585.ebuild:
  Version bump.

*unetbootin-584 (06 Jun 2013)

  06 Jun 2013; Jeroen Roovers <jer@gentoo.org> +unetbootin-584.ebuild:
  Version bump.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> unetbootin-583.ebuild:
  Move Qt dependencies to the new category

  09 Feb 2013; Jeroen Roovers <jer@gentoo.org> -unetbootin-581.ebuild:
  Old.

  02 Feb 2013; Jeff Horelick <jdhore@gentoo.org> unetbootin-583.ebuild:
  x86 stable wrt bug #454766

  31 Jan 2013; Homer Parker <hparker@gentoo.org> unetbootin-583.ebuild: