@@ -1,27 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX unetbootin-581-desktop.patch 707 SHA256 f0baf1835aa8ae51d0c81a2a1a9bc9a6e77ee2f7b443931f525d9fff1bd56124 SHA512 036f887c7fb4209cd08710be88ef25671e8c1e481e3d82bc78cc1e3b1480224573cbbbf8c290846373937863400ee108b72521c1d6a9a883e01209c1da33cae2 WHIRLPOOL be30f248621adb6432c08821fbeb31d5605313a93ccfc397517e8a11c232c931a04affe2ed82aad6d8172a724ed8784465b99e0fdeb8b828b89a210511085070
+DIST 619.tar.gz 22669784 SHA256 84bd5b29a46f61156868acf0d069c2c6b3ec13435dc11cc82f93e8c30523966f SHA512 81a02c0b7866f878139133562db745538f1f22fb90231a228792dccd3c5ff0c1c7cefc435b34cc14302b0d2b20e97342295fb65c7f28c220a637b1d52fa77e3c WHIRLPOOL 66a46933ea16b73f94d95080241103bac985694bc7b28e4213341aa9e6cb03f0fdf85bc19f9491b1ac97cba2ac83edfdba31965b9d138ef46bbf337bf03ded05
 DIST unetbootin-source-608.tar.gz 752043 SHA256 ce99c5f60b1f66da0ceb41859ce9198d96b3061b949b167fc952d3951b632080 SHA512 d164537c96845eb90ac5aae1fa0c553c9392d778696e4818760cb11f78341e6a3ea6a05f702678583c5d680dc8fb1348cdc2b2dfba9bebfdf793779c23611d16 WHIRLPOOL 56cc31e047c283b4f6ef639283c7e9a3e59332fb4f3b70baa279e973c19adc42a276074087b530a49cad41076cf29990c65323d805e0a7b4fccd37bdf1132649
 EBUILD unetbootin-608.ebuild 1996 SHA256 7977f4c09f3b1faff60c467235422da6844fedf942def33d0702675c58e4f707 SHA512 14467ca52ce1c24a86fddce40fa0b7cd3f059583c292bcfe916decacec362f93bc4b6ff4f43389a790dc11ce44956da617760000f1a691ac861c4d35374ff1ff WHIRLPOOL 914e355bd15e4ab5532721ae6463b34bb4ad60abec4ddbdf2f8f763748f0c4ad595e5f168c5a65502b5cf79b72ff34e25767d622c547ee4799e3d151511cd9b1
-MISC ChangeLog 13836 SHA256 207822bc441f500af1ec35fbaa15ce25a5f631665575de836eccc54762fbf7be SHA512 f605f4d391bbaab5ff92bdaaeda292a85ec4eb7c21e688f17ceccda189ccc763f4502f038c2796f75ac8a80523e89e2636c397b48f99d120cf90f7a647a640d1 WHIRLPOOL 60b4794c18917af54d21987d1cecbb8195c1069b509f96901ae4eca0930a2feab9a0720725b327fd7933708e8d9541b0a990c70b975089cc8deefe5528e71a3f
+EBUILD unetbootin-619.ebuild 2042 SHA256 3f8ce59cf278849432288a6bf84ad8ea1aafaf51295d39ed6d75332ed02fbfae SHA512 e20621a3d9146193b522508d74ce1c7743379929e84bb74ac9867d0900783fd7cfa78aa6f3e5d75f2cc01e1e4cb7cb88299f6a70c72abd397e9500519a4db7d5 WHIRLPOOL 26a6f817aeb3d71d43b623c1d51ebd7ae1c712498b00a03abce710b7d83311ba3cf315160af082897101fee39b529423e75464fb74366241a6bb5750b3bd8be3
+MISC ChangeLog 13986 SHA256 12329fc1af8be2e6d566b47236b9076f5ee50046f8e8842debcc05f8f9f6011e SHA512 0934a896faae95865ec2723336de079ebd339f22c723ff26525a8a4b25fcb353d45b0b6cc22775af2d28916acfd1a14be9f43d1a331b8a3ad8dc28f63e2ae8d2 WHIRLPOOL de865f2c926e681d0f2d3124333bc736d1fb3c0b91d6ed4e4469440710a215eb6381cd43df33cae8eedddca366717202e502c57fe71dc4d17c5f63389db625ab
 MISC metadata.xml 310 SHA256 f30b8e7a8610fdd5969c1aa5df894d532459a22f4922289eafc17f55877d95ea SHA512 2b8d7dc370ab37c0ef0fca03578b10eb406c32d807350c033996762067fd53c97cec926abcdb447431c57c5acebaa8c5509d03b40d06018f7c100087c1970cfb WHIRLPOOL 3d8b529639cc884b516fccc6c4f4f36b3facce1adef7f7ecb465c7634befe7a9ee8cfb95af3e28f64925e215dfdc3549c3060621f1c13cb42c07f56e4e490ba7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVfyfPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiO7cQAKWAMqgAhFt+eqr+b3muhFSY
-l2Y/ipaTsniiQ26ALPavcoq1K29VcIx1bhHNh64p17Y8u6iy+ewapYWZr6C/ZFce
-a0BSUENuxtTE2DhRVjO2eTFL3+N1N4WhpSN0/mtjWeJxC6MPMTBFOhvufmuoiA9A
-J21t1ieMZ9uod7vPg6fmMK2XWvEbxd1259zn28dr+Szg7I/RmEWTZTUMP/ABynWb
-j8rzWPByWNCkAdgQSJabJRqvxDpHGMwWDpUj66qhFd5xV0bCMQITSgn1OUEAb04h
-F83ApHPYv+ltJsIIuSm1ewZhj6KbzATw4ss4HKTZ2AOwc1d0vHaQk1ZO3KTv1gDX
-jjZETo9M6aBNG2WT1r3dBHt0Uw8kRUq8GHvbpTGI5pOeK85GtIyf27SOEcDtXF/L
-Ij41T1OKy/mtW6sQS+aO/l/pdiOjKYsCTPvihCALRoixVFG6JETIs+Ysbu/J6Ltu
-BnYuwfwi4/6ntuK8I52F4ZpytdkSKpc7vj96nNsceTeTnkZgt+Mca85TO7A1EAI2
-/Uo8PxuVnzsRUN/g7g4O52fAdeSrl/43onp51rG4Rkp+u+VF4NBlSIF+wJ1KOEAN
-im1E6gOedsNjAG4JfLJJQ8Kfre+yK2KW0q2fpbFoudQ8YBplQEOyDxgji5LExrij
-dgW66/pBydFot7kM+bm+
-=fJsp
+iEYEAREIAAYFAlXFoZsACgkQVWmRsqeSphOUDwCeKWjiJnz8cCFKJw5xuOXCh7is
+ZVYAnjV0nBUZD+nX5sDoBq8/oJA1oJ6B
+=e0Jz
 -----END PGP SIGNATURE-----
