@@ -1,6 +1,11 @@
 # ChangeLog for sys-boot/unetbootin
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/unetbootin/ChangeLog,v 1.109 2014/11/02 14:14:49 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/unetbootin/ChangeLog,v 1.110 2015/08/08 06:28:42 jer Exp $
+
+*unetbootin-619 (08 Aug 2015)
+
+  08 Aug 2015; Jeroen Roovers <jer@gentoo.org> +unetbootin-619.ebuild:
+  Version bump (bug #556938 by Manuel Rüger).
 
   02 Nov 2014; Jeroen Roovers <jer@gentoo.org> unetbootin-608.ebuild:
   Drop <sys-boot/syslinux-5 dependency (bug #474648).
